# Project03_46W38

./: .gitignore  LICENSE  README.md  main_scikit_learn.py  pyproject.toml
examples/: main.py
src/: main_v0.py
src/project03/: __init__.py  keras_wrapper.py  utilities.py  wind_forecast.py
tests/: test_split.py
