[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project03"
version = "0.1.0"
description = "Wind power forecasting project"
authors = [{ name = "Stefano" }]
readme = "README.md"
license = "MIT"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "tensorflow",
  "tkcalendar"
  ] 

[tool.hatch.build]
packages = ["src/project03"]